# pdf_editor

./: README.md  Readme.md  activation_local.bat  app.py  pyproject.toml
