[tool.poetry]
name = "pdf-editor"
version = "0.1.0"
description = ""
authors = ["Ryota Jin"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.39.0"
pypdf = "^5.0.1"
pdf2image = "^1.17.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
